# ProductFlow

./: .dockerignore  .env.dev.example  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.en.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.en.md  README.md  SECURITY.en.md  SECURITY.md  TODOS.md  docker-compose.yml  justfile
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260421_0001_initial.py  20260421_0002_add_reference_image_kind.py  20260423_0003_add_image_sessions.py  20260423_0004_add_backend_safety_constraints.py  20260424_0005_add_image_session_response_metadata.py  20260424_0006_add_app_settings.py  20260424_0007_add_product_workflow_dag.py  20260424_0008_add_reference_image_workflow_enum_value.py  20260424_0009_repair_reference_image_workflow_enum.py  20260424_0010_remove_legacy_workflow_nodes.py  20260428_0017_drop_job_runs.py  (+10 more)
backend/tests/: conftest.py  helpers.py  test_auth_settings_runtime_config.py  test_business_deletion_toggle.py  test_canvas_templates.py  test_error_handling.py  test_gallery.py  test_generation_admission.py  test_image_generation_core.py  test_image_sessions.py  test_launch_kits_foundation.py  test_logging_behavior.py  test_migrations_database_constraints.py  test_product_crud_jobs.py  test_product_workflow_dag.py  test_product_workflow_mutations.py  test_product_workflow_queue_recovery.py  test_provider_payloads.py  test_queue_recovery.py  test_storage_upload_validation.py  test_workflow.py  test_workflow_dependencies.py  test_workflow_domain_rules.py
(+216 files in other folders)
